# dlib-mod

./: README.md  README.txt  README1.txt
dlib/: CMakeLists.txt  assert.h  revision.h  simple.h
dlib/all/: source.cpp
dlib/dnn/: core.h  core_abstract.h  cudnn_dlibapi.cpp  input.h  input_abstract.h  layers_abstract.h
dlib/geometry/: rectangle.h  vector.h
dlib/graph_utils/: .graph_utils.h.swp
dlib/image_processing/: object_detector.h  shape_predictor.h
dlib/image_transforms/: fhog.h
dlib/matlab/: mex_wrapper.cpp
dlib/matrix/: matrix.h  matrix_assign_fwd.h  matrix_utilities.h
dlib/optimization/: optimization_solve_qp3_using_smo.h
dlib/smart_pointers/: .scoped_ptr.h.swp
dlib/statistics/: running_gradient.h
dlib/svm/: .one_vs_one_trainer.h.swo  structural_svm_object_detection_problem.h  svm_nu_trainer.h
dlib/test/: dnn.cpp  thread_pool.cpp
dlib/threads/: .parallel_for_extension.h.swp  async.cpp
docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  compile.html  compression.html  containers.html  dnn_imagenet_ex.cpp.html  faq.html  graph_tools.html  howto_contribute.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  license.html  linear_algebra.html  metaprogramming.html  ml.html  network.html  old_change_log.html  old_release_notes.html  optimization.html  other.html  parsing.html  release_notes.html  term_index.html  train_shape_predictor_ex.cpp.html
docs/dlib/: CMakeLists.txt.html  assert.h.html  pixel.h.html  revision.h.html
docs/dlib/all/: source.cpp.html
docs/dlib/dnn/: core.h.html  core_abstract.h.html  cudnn_dlibapi.cpp.html  input.h.html  input_abstract.h.html  layers_abstract.h.html
docs/dlib/geometry/: point_transforms.h.html
docs/dlib/image_processing/: shape_predictor.h.html  shape_predictor_abstract.h.html
docs/dlib/matlab/: mex_wrapper.cpp.html
docs/dlib/matrix/: matrix.h.html  matrix_blas_bindings.h.html  matrix_trsm.h.html  matrix_utilities.h.html
docs/dlib/python/: numpy.h.html
docs/dlib/statistics/: running_gradient.h.html
docs/dlib/svm/: structural_svm_object_detection_problem.h.html
docs/dlib/test/: dnn.cpp.html  thread_pool.cpp.html
docs/dlib/threads/: async.cpp.html
examples/: .test.txt.swp  CMakeLists.txt  dnn_imagenet_ex.cpp  face.txt  face_detection_ex.cpp  gendata_multi.cpp  gendata_svm.cpp  gmontest.cpp  multi.txt  multiclass_classification_ex.cpp  packages.txt  svm.txt  svm_c_ex.cpp  svm_results.txt  test.txt  train_shape_predictor_ex.cpp
tools/imglab/: CMakeLists.txt
tools/imglab/src/: main.cpp
tools/python/: CMakeLists.txt
